[package]
name = "att"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "http2"] }
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
